ghc-4335c07/testsuite/tests/ffi/should_fail/capi_value_function.hs

{-# LANGUAGE CApiFFI #-}

module M where

import Foreign.C

foreign import capi "math.h value sqrt" f :: CInt -> CInt

